--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bug",
   "main": "specification words typing",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "grunt default",
+    "build": "grunt build"
   },
   "repository": {
     "type": "git",
@@ -21,10 +22,16 @@
   "homepage": "https://github.com/zhumoozi/Fixme.git#readme",
   "dependencies": {
     "grunt": "~0.4.5",
+    "grunt-contrib-uglify": "^3.1.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-develop": "~0.4.0"
+    "grunt-develop": "~0.4.0",
+    "normalize.css": "^7.0.0",
+    "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-htmlmin": "latest",
+    "grunt-contrib-connect": "latest"
   },
   "devDependencies": {
-    "normalize.css": "^7.0.0"
+    "grunt-contrib-clean": "^1.1.0"
   }
 }
